crates/rusvelte_parser/tests/simple/snapshots/snapshot__simple__success@closing-tag-omitted.svelte.snap
---
source: crates/rusvelte_parser/tests/simple/mod.rs
expression: root
input_file: crates/rusvelte_parser/tests/simple/inputs/closing-tag-omitted.svelte
snapshot_kind: text
---
{
  "type": "Root",
  "css": null,
  "start": 0,
  "end": 13,
  "fragment": {
    "type": "Fragment",
    "nodes": [
      {
        "type": "RegularElement",
        "start": 0,
        "end": 6,
        "name": "p",
        "attributes": [],
        "fragment": {
          "type": "Fragment",
          "nodes": [
            {
              "type": "Text",
              "start": 3,
              "end": 6,
              "raw": "111",
              "data": "111"
            }
          ]
        }
      },
      {
        "type": "RegularElement",
        "start": 6,
        "end": 13,
        "name": "p",
        "attributes": [],
        "fragment": {
          "type": "Fragment",
          "nodes": []
        }
      }
    ]
  },
  "module": null,
  "instance": null,
  "options": null
}
