crates/rusvelte_parser/tests/simple/snapshots/snapshot__simple__success@comment.svelte.snap
---
source: crates/rusvelte_parser/tests/simple/mod.rs
expression: root
input_file: crates/rusvelte_parser/tests/simple/inputs/comment.svelte
snapshot_kind: text
---
{
  "type": "Root",
  "css": null,
  "start": 0,
  "end": 18,
  "fragment": {
    "type": "Fragment",
    "nodes": [
      {
        "type": "Comment",
        "start": 0,
        "end": 7,
        "data": ""
      },
      {
        "type": "Comment",
        "start": 7,
        "end": 18,
        "data": "data"
      }
    ]
  },
  "module": null,
  "instance": null,
  "options": null
}
