crates/rusvelte_parser/tests/simple/snapshots/snapshot__simple__success@regular-element.svelte.snap
---
source: crates/rusvelte_parser/tests/simple/mod.rs
expression: root
input_file: crates/rusvelte_parser/tests/simple/inputs/regular-element.svelte
snapshot_kind: text
---
{
  "type": "Root",
  "css": null,
  "start": 0,
  "end": 20,
  "fragment": {
    "type": "Fragment",
    "nodes": [
      {
        "type": "RegularElement",
        "start": 0,
        "end": 14,
        "name": "div",
        "attributes": [],
        "fragment": {
          "type": "Fragment",
          "nodes": [
            {
              "type": "Text",
              "start": 5,
              "end": 8,
              "raw": "foo",
              "data": "foo"
            }
          ]
        }
      },
      {
        "type": "RegularElement",
        "start": 14,
        "end": 20,
        "name": "br",
        "attributes": [],
        "fragment": {
          "type": "Fragment",
          "nodes": []
        }
      }
    ]
  },
  "module": null,
  "instance": null,
  "options": null
}
